2001-10-29  Pierre-Yves Rivaille <pyrivail@ens-lyon.fr>

	* GormDocument.m ([GormDocument -init]): set the NSTableView's
	properties so that it benefits from [NSTableView -sizeToFit]

2001-10-29  Richard Frith-Macdonald <rfm@gnu.org>

	* GormClassManager.m: Tidy action names in browser etc.
	* GormWindowEditor.m: Tidy size of matrix at end of resize.

2001-10-28  Pierre-Yves Rivaille <pyrivail@ens-lyon.fr>

	* Palettes/2Controls/main.m ([ControlsPalette -finishInstantiate]): 
	update NSStepper in the controls' palette (it has a new default size)
	

2001-10-26  Richard Frith-Macdonald <rfm@gnu.org>

	* GormClassManager.m: Force class, action, and outlet names to be
	legal identifiers ... ie consist of alhpanumeric and underscore
	characters with a non-numeric initial character.
	A roundabout/fundamental fix for a problem generating output files
	reported by Ludovic Marcotte

2001-10-27  Laurent Julliard  <laurent@julliard-online.org>

	* ClassInformation.plist: IBInspector actions/outlets closer to OS 4.2
	* Palettes/1Windows/GormMatrixInspector.gorm: new layout and new fields
	* Palettes/1Windows/GormWindowInspector.gorm: new layout and new fields
	* Palettes/1Windows/main.m: code for new Window inspector
	* Palettes/2Controls/GormSliderInspector.gorm: new layout and new fields
	* Palettes/2Controls/GormTextFieldInspector.gorm: uses icons, new layout, ok button removed
	* Palettes/2Controls/GormButtonInspector.gorm: uses icons, ok button removed
	* Palettes/2Controls/GormBoxInspector.gorm: uses icons and sliders
	* Palettes/2Controls/GormFormInspector.gorm: ok button removed, uses icons.
	* Palettes/2Controls/GormPopUpButtonInspector.gorm: ok button removed
	* Palettes/2Controls/GormCellInspector.gorm: ok button removed
	* Palettes/2Controls/GormBoxInspector.gorm: ok button removed, sliders added
	* Palettes/2Controls/inspectors.m: code for new/updated inspectors
	* Images/centeralign_nib.tiff: new inspector icon
	* Images/justifyalign_nib.tiff: new inspector icon